# ego-metrology

./: .gitignore  CHANGELOG.md  LICENSE  README.md  calibrate_mistral.py  calibrate_mistral_v2.py  calibrate_mistral_v3_1.py  calibrate_qwen_v4_clean.py  calibration_compare_claude_mini.json  calibration_haiku_v4_full.json  calibration_qwen_v4_clean.json  calibration_qwen_v4_full.json  calibration_results.json  calibration_v2_results.json  calibration_v3_1_results.json  calibration_v3_results.json  calibration_v4_mini.json  calibration_v4_results.json  compare_claude_v4_mini.py  fix_cli_docs.py  make_family_a_corpus.py  patch_changelog.py  patch_changelog2.py  pyproject.toml  run_family_a_extract_then_check.py  server.py  write_readme.py
.github/workflows/: ci.yml
data/: family_a_fixed_v1.json  family_a_fixed_v2.json
docs/: bullshitbench_adapter_v1.md  cost_dyn_v1.md  gpu_metrics_roadmap_v031.md  oracle_v1.md  policy_registry_v1.md  reporting_v1.md  routing_regret_v1.md  run_runner_v1.md  runrecord_v1.md  t9_1_runtime_contract_v2.md
ego_metrology/: __init__.py  __main__.py  cost.py  heuristics.py  logging_schema.py  oracle.py  policies.py  policy_registry.json  profiler.py  regret.py  reporting.py
ego_metrology/backends/: anthropic_api.py  base.py  openai_compat.py
ego_metrology/benchmarks/: bullshitbench.py
ego_metrology/runners/: run_benchmark.py
experiments/: README.md
experiments/scripts/: analyze_extract_then_check.py  analyze_family_a_policies.py  calibrate_haiku_v4_full.py  calibrate_mistral_v3.py  calibrate_mistral_v4.py  calibrate_qwen_v4_full.py  run_family_a_policies.py  (+2 more)
reports/: calibration_v4_closure.md  family_a_qwen_policy_eval_v1_summary.json  family_a_qwen_policy_eval_v1_summary.md  policy_summary_bullshitbench_v2.csv  policy_summary_real_bullshitbench_v2.csv  sprint_real_bullshitbench_v2.md  sprint_report_bullshitbench_v2.md
runs/: claude_real.jsonl  family_a_qwen_extract_then_check_v1.jsonl  family_a_qwen_extract_then_check_v2.jsonl  family_a_qwen_policy_eval_v1.jsonl  family_a_qwen_semantic_verify_v1.jsonl  family_a_qwen_semantic_verify_v2.jsonl  family_a_qwen_verify_eval_v1.jsonl  mistral_real.jsonl  qwen_real.jsonl  sample.jsonl
tests/: test_anthropic_backend.py  test_bullshitbench.py  test_cost.py  test_logging_schema.py  test_oracle.py  test_policies.py  test_profiler.py  test_regret.py  test_reporting.py  test_run_benchmark.py  test_server_api.py  test_version_consistency.py
(+2 files in other folders)
