[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ego-metrology"
version = "0.2.1"
description = "Heuristic Context Saturation Profiler for LLMs — EGO V12.2 Framework"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Julien Tournier", email = "julien@uyuni.world" }
]
keywords = ["llm", "prompt-engineering", "hallucination", "context-window", "mlops", "rag"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
ego-profile = "ego_metrology.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ego_metrology*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
