[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ego-metrology"
version = "0.3.0"
description = "Policy Metrology Core for LLMs — cost_dyn, oracle C*, routing regret"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
]
authors = [
    { name = "Julien Tournier", email = "julien@uyuni.world" }
]
keywords = ["llm", "policy-metrology", "cost-optimization", "routing-regret", "benchmark", "mlops"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "fastapi>=0.110", "httpx>=0.27", "uvicorn>=0.29"]

[project.scripts]
ego-profile = "ego_metrology.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ego_metrology*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.setuptools.package-data]
ego_metrology = ["policy_registry.json"]
